# leet-info-graph-gpt-5.2

./: .code_project_state.json  .gitignore  README.md  goals.md  pyproject.toml  task.md
.leet/: .todos.done.json  .todos.json
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  deps.py  ingest.py  jobs.py  metrics.py  search.py  sessions.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  infographic.py  message.py  research_session.py  source.py  user.py
backend/app/schemas/: provenance.py  sessions.py  sources.py
backend/app/services/: auth.py  google_oauth.py  infographic.py  ingest.py  jobs.py  research_worker.py  source_fetcher.py  storage.py  summarizer.py  web_search.py
backend/app/tests/: conftest.py  test_cost_guardrails.py  test_google_oauth_callback.py  test_infographic_renderer.py  test_ingest.py  test_jobs.py  test_jobs_queue_unit.py  test_metrics_adoption.py  test_provenance_claims.py  test_search.py  test_sessions.py  test_storage_local_media_storage.py  test_web_search_limits.py
backend/tests/: README.md  conftest.py  test_auth_oauth_state.py  test_prompt_validation.py  test_research_worker_timing.py  test_source_fetcher_quality.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/ui/: App.test.tsx  App.tsx  historyFilter.test.ts  historyFilter.ts
